# csma_junior_2026

./: .gitignore  LICENSE  Makefile  README.md  Snakefile  pyproject.toml
.github/workflows/: ci.yml
pybeam/: __init__.py  arlequin.py  dirichlet_bc.py  elements.py  fe_operator.py  mesh.py
scripts/: aggregate.py  plot_convergence.py
tests/: test_analytical_classic.py  test_validation.py
tests/cases/: analytical_arlequin_homo_default.py  analytical_arlequin_homo_default.ref.csv  analytical_traction_default.py  analytical_traction_default.ref.csv  analytical_traction_default.toml  arlequin_default.py  arlequin_default.ref.csv  arlequin_default.toml  homogenization_default.py  homogenization_default.ref.csv  homogenization_default.toml  monolithic_default.py  monolithic_default.ref.csv  monolithic_default.toml
workflows/: __init__.py  run_parametric.py
