[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csma-tp"
version = "0.1.0"
description = "TP CSMA — Arlequin method for heterogeneous beams"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
]

[dependency-groups]
dev = ["pytest>=8", "snakemake>=8"]

[tool.setuptools.packages.find]
include = ["pybeam*", "workflows*"]
